--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "expo": "~40.0.0",
     "expo-constants": "^10.0.1",
     "expo-status-bar": "~1.0.3",
+    "formik": "^2.2.5",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
