--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~40.0.0",
     "expo-constants": "^10.0.1",
     "expo-image-picker": "~9.2.0",
+    "expo-location": "~10.0.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.5",
