--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^5.11.7",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.3.5",
+    "apisauce": "^2.0.1",
     "expo": "~40.0.0",
     "expo-constants": "^10.0.1",
     "expo-image-picker": "~9.2.0",
