--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.5",
+    "lottie-react-native": "~2.6.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
