--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.3.5",
     "apisauce": "^2.0.1",
     "expo": "~40.0.0",
+    "expo-blur": "~8.2.2",
     "expo-constants": "^10.0.1",
     "expo-image-picker": "~9.2.0",
     "expo-location": "~10.0.0",
@@ -29,6 +30,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-progress": "^4.1.2",
     "react-native-reanimated": "~1.13.0",
