--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "json-server -p 9000 -w db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Georgina Adzorgenu",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "json-server": "^0.16.3",
+    "mongoose": "^5.11.18",
+    "nodemon": "^2.0.7"
+  }
 }
