--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.5",
+    "jwt-decode":"^2.2.0",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
