--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.3.5",
     "apisauce": "^2.0.1",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-blur": "~8.2.2",
     "expo-constants": "^10.0.1",
@@ -24,7 +25,7 @@
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
     "formik": "^2.2.5",
-    "jwt-decode":"^2.2.0",
+    "jwt-decode": "^2.2.0",
     "lottie-react-native": "~2.6.1",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
