--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
-    "nodemon": "^2.0.7"
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7"
   }
 }
