--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "json-server": "^0.16.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.15",
