--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "apisauce": "^2.0.1",
     "axios": "^0.21.1",
     "expo": "~40.0.0",
+    "expo-app-loading": "^1.0.1",
     "expo-blur": "~8.2.2",
     "expo-constants": "^10.0.1",
     "expo-image-picker": "~9.2.0",
