--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -22,8 +22,7 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./app/assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF",
-        "useNextNotificationsApi": true
+        "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
