--- a/Frontend/app.json
+++ b/Frontend/app.json
@@ -4,7 +4,7 @@
     "slug": "DoneWithIt",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./app/assets/icon.png",
+    "icon": "./app/assets/logo.png",
     "splash": {
       "image": "./app/assets/splash.png",
       "resizeMode": "cover",
